--- a/Cluster_RPI/inventory.example.yml
+++ b/Cluster_RPI/inventory.example.yml
@@ -5,7 +5,10 @@ all:
       hosts:
         RPI1:
           ansible_host: 192.168.0.2
+          hostname: "Raspberry1"
         RPI2:
           ansible_host: 192.168.0.3
+          hostname: "Raspberry2"
         RPI3:
           ansible_host: 192.168.0.4
+          hostname: "Raspberry3"
